--- a/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/res/layout/activity_basic.xml
+++ b/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/res/layout/activity_basic.xml
@@ -30,4 +30,11 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <TextView
+        android:id="@+id/messageView"
+        android:layout_width="282dp"
+        android:layout_height="62dp"
+        android:text="messageView"
+        android:layout_gravity="center|center" />
+
 </android.support.design.widget.CoordinatorLayout>
