Added login bypass for testing and changed server that is connected to.
Added login bypass for testing and changed server that is connected to.

--- a/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Experiments/parkers_experiments/LoginTestAndroid/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,14 @@
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/bypassBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="bypass"
+                tools:text="bypassText" />
+
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
