--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/username_sign_in_button"
+                android:id="@+id/sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -105,6 +105,12 @@
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/debugText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
