working on chat application
constructed some structure for the chat function

--- a/Experiments/yung-hsuehs_experiments/exp-2/initial-boot-app/src/main/resources/static/index.css
+++ b/Experiments/yung-hsuehs_experiments/exp-2/initial-boot-app/src/main/resources/static/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-  background-color: #ffff00;
+  background-color: pink;
   padding: 30px 40px;
   color: black;
   text-align: center;
