--- a/Experiments/anastasias_experiments/ASPractice/app/src/main/res/layout/activity_basic.xml
+++ b/Experiments/anastasias_experiments/ASPractice/app/src/main/res/layout/activity_basic.xml
@@ -22,7 +22,9 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/content_basic" />
+        layout="@layout/content_basic"
+        app:layout_anchor="@+id/mapfab"
+        app:layout_anchorGravity="bottom|center" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -52,11 +54,12 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/mapfab"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="158dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/design_default_color_primary"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="left|center"
+        app:layout_anchorGravity="right"
         app:srcCompat="@android:drawable/ic_dialog_map" />
 
 </android.support.design.widget.CoordinatorLayout>
