--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,13 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
+    <Button
+        android:id="@+id/Skipsies"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text= "Skipsies"
+        android:layout_gravity="center_horizontal|bottom"/>
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
