--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
@@ -21,10 +21,10 @@
         android:visibility="gone" />
 
     <Button
-        android:id="@+id/Skipsies"
+        android:id="@+id/nextbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text= "Skipsies"
+        android:text= "next"
         android:layout_gravity="center_horizontal|bottom"/>
 
     <ScrollView
