--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
@@ -4,4 +4,12 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity" >
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back"
+        android:layout_gravity="center_horizontal|bottom"/>/>
+</FrameLayout>
