--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/dimens.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="horizontal_page_margin">16dp</dimen>
+    <dimen name="vertical_page_margin">16dp</dimen>
 </resources>
