--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="back"
-        android:layout_gravity="center_horizontal|bottom"/>/>
+        android:layout_gravity="center_horizontal|bottom"/>
+
+
 
 </FrameLayout>
