--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,12 @@
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/debugText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
         </LinearLayout>
     </ScrollView>
 
