--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/fragment_chat.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/fragment_chat.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
 </LinearLayout>
