--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
@@ -22,8 +22,9 @@
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="156dp"
         android:scrollbars="vertical"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -31,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 1"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -46,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 2"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -55,12 +56,13 @@
 
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Example1" />
+
     <TextView
         android:id="@+id/example3"
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 3"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -75,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="180dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 4"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -90,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="138dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 5"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -99,5 +101,33 @@
 
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Example1" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="60dp"
+        android:background="@color/colorAccent"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toTopOf="@+id/plant_item_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/newChat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="61dp"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/plant_item_title"
+        app:layout_constraintEnd_toStartOf="@+id/toolbar2"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
