--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 1"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="250dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 2"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -62,7 +62,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 3"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="350dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 4"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="19dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="400dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="Example 5"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -106,15 +106,13 @@
         android:id="@+id/toolbar2"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="60dp"
         android:background="@color/colorAccent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:layout_constraintBottom_toTopOf="@+id/plant_item_title"
+        android:layout_marginTop="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="42dp" />
 
     <Button
         android:id="@+id/newChat"
@@ -122,12 +120,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="61dp"
+        android:layout_marginBottom="110dp"
         android:text="+"
         app:layout_constraintBottom_toTopOf="@+id/plant_item_title"
         app:layout_constraintEnd_toStartOf="@+id/toolbar2"
-        app:layout_constraintHorizontal_bias="0.43"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.14999998" />
 
 
 </android.support.constraint.ConstraintLayout>
