--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/cache_view_list.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/cache_view_list.xml
@@ -8,8 +8,11 @@
     android:paddingBottom="10dp"
     >
 
+
+
     <TextView
         android:id="@+id/cache_name"
+        android:padding="10dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,6 +20,7 @@
 
     <TextView
         android:id="@+id/cache_location"
+        android:layout_gravity="fill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
