--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
@@ -12,6 +12,14 @@
         android:layout_height="wrap_content"
         android:text="back"
         android:layout_gravity="center_horizontal|bottom"/>
+    <Button
+        android:id="@+id/cache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cache"
+        android:layout_gravity="right|bottom"/>
+
+
 
 
 
