--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="MainFragment"
+        android:text = "Chat Page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +27,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
     <TextView
         android:id="@+id/plant_item_title"
         android:layout_width="0dp"
@@ -34,96 +36,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 1"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-
-    <TextView
-        android:id="@+id/example2"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 2"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-
-    <TextView
-        android:id="@+id/example3"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 3"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-
-    <TextView
-        android:id="@+id/example4"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="350dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 4"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-
-    <TextView
-        android:id="@+id/example5"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 5"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-
-    <TextView
-        android:id="@+id/ex6"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="450dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 6"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Example1" />
-    <TextView
-        android:id="@+id/ex7"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Example 7"
+        android:text="Item on a page"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
