Completed some code for the forgot password flow
Completed some code for the forgot password flow including the username and answer/password screens. Got it so you can go between screens but it does not actually do anything on the server yet.

--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_forgot_password_username.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_forgot_password_username.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,69 +35,51 @@
         android:visibility="gone" />
 
     <ScrollView
-        android:id="@+id/register_form"
+        android:id="@+id/getQuestionForm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/user_register_form"
+            android:id="@+id/user_question_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/securityQuestion"
+                android:id="@+id/forgot_pass_username_prompt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Security Question Here" />
+                android:text="Please enter your username:" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:passwordToggleEnabled="false">
 
                 <EditText
-                    android:id="@+id/securityQuestionAnswer"
+                    android:id="@+id/forgot_pass_username_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
-                    android:hint="@string/prompt_security_answer"
+                    android:hint="Enter Username"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <AutoCompleteTextView
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_username"
-                    android:inputType="textPersonName"
+                    android:inputType="text"
                     android:maxLines="1"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/recover_account_button"
+                android:id="@+id/get_question_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:text="@string/action_recover_account"
+                android:text="Get Question"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/debugText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </ScrollView>
