--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/main_activity.xml
@@ -29,84 +29,76 @@
 
 
 
-    <LinearLayout
-        android:id="@+id/linearLayoutMain"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/editText1"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:hint="Enter Your Info Below"
-            android:layout_marginBottom="25dp"
-            android:layout_marginTop="25dp"/>
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical"
+            >
 
-        <LinearLayout
-            android:id="@+id/linearLayoutDecisions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/tvIsConnected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="#FF0000"
+                android:textColor="#FFF"
+                android:textSize="18dp"
+                android:padding="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="is connected? " />
+
 
             <EditText
                 android:id="@+id/id"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:inputType="number"
-                android:gravity="center"
-                android:hint="id" />
+                android:hint="id..."/>
+
+
 
             <EditText
                 android:id="@+id/user"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:inputType="text"
-                android:hint="user" />
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="user..."/>
+
+
+
 
             <EditText
                 android:id="@+id/cacheId"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:hint="cache id" />
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="cacheid..."/>
+
+
+            <Button
+                android:id="@+id/btnSend"
+                android:text="Send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:onClick="send"/>
+
+            <TextView
+                android:id="@+id/tvResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#000"
+                android:textSize="18dp"
+                android:padding="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnSend"
-            android:text="Send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="send"/>
-        <TextView
-            android:id="@+id/tvIsConnected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FF0000"
-            android:textColor="#FFF"
-            android:textSize="18dp"
-            android:padding="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="is connected? " />
-
-        <TextView
-            android:id="@+id/tvResult"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="#000"
-            android:textSize="18dp"
-            android:padding="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="" />
-
-
-    </LinearLayout>
 
 </LinearLayout>
