send new chat to username/chat ID

--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_send_new.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_send_new.xml
@@ -12,6 +12,11 @@
         android:inputType="number"
         />
 
+    <EditText
+        android:id="@+id/username"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:hint="username"/>
 
     <EditText
         android:id="@+id/message"
