--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_chat.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_chat.xml
@@ -48,6 +48,7 @@
 
                 <!--<Button
                     android:id="@+id/send_message"
+                    did i forget how to commit?
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
