--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/xml/network_sec_conf.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/xml/network_sec_conf.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">cs309-jr-2.misc.iastate.edu</domain>
+        <domain includeSubdomains="true">prometheus.student.iastate.edu</domain>
     </domain-config>
 </network-security-config>
