--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_cache_chat_room.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_cache_chat_room.xml
@@ -20,17 +20,26 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_cache_chat_room" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
+    <include layout="@layout/content_cache_chat_room"
+        android:layout_marginBottom="40dp"
+
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
+    </RelativeLayout>
 
 
-        <LinearLayout
+    <LinearLayout
         android:id="@+id/llMsgCompose"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
+        android:layout_gravity="bottom"
         android:background="#ffffff"
         android:orientation="horizontal"
-        android:layout_gravity="bottom"
-        android:weightSum="1" >
+        android:weightSum="1">
 
         <EditText
             android:id="@+id/new_message"
@@ -38,9 +47,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
-            android:textColor="#666666"
             android:paddingLeft="6dp"
-            android:paddingRight="6dp"/>
+            android:paddingRight="6dp"
+            android:textColor="#666666" />
 
         <!--<Button
             android:id="@+id/send_message"
@@ -57,8 +66,8 @@
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_send"
-            android:background="#3F51B5"/>
+            android:background="#3F51B5"
+            android:src="@drawable/ic_send" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
