--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_cache_list.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_cache_list.xml
@@ -26,7 +26,7 @@
         android:id="@+id/listLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +48,7 @@
             android:id="@+id/rvCacheList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,74 +57,74 @@
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout3"
-        android:layout_width="102dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listLayout">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/textInputLayout3"-->
+        <!--android:layout_width="102dp"-->
+        <!--android:layout_height="57dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="6dp"-->
+        <!--android:layout_marginEnd="5dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/listLayout">-->
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/nameInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Name" />
-    </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputEditText-->
+            <!--android:id="@+id/nameInput"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Name" />-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="97dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
-        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
-        app:layout_constraintTop_toBottomOf="@+id/listLayout">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/textInputLayout2"-->
+        <!--android:layout_width="97dp"-->
+        <!--android:layout_height="56dp"-->
+        <!--android:layout_marginStart="5dp"-->
+        <!--android:layout_marginTop="2dp"-->
+        <!--android:layout_marginEnd="5dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toStartOf="@+id/textInputLayout"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textInputLayout3"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/listLayout">-->
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/latInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Lat" />
-    </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputEditText-->
+            <!--android:id="@+id/latInput"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Lat" />-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="84dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/addCacheBtn"
-        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/listLayout">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/textInputLayout"-->
+        <!--android:layout_width="84dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="5dp"-->
+        <!--android:layout_marginTop="2dp"-->
+        <!--android:layout_marginEnd="5dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toStartOf="@+id/addCacheBtn"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textInputLayout2"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/listLayout">-->
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/longInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Lon" />
+        <!--<android.support.design.widget.TextInputEditText-->
+            <!--android:id="@+id/longInput"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Lon" />-->
 
-    </android.support.design.widget.TextInputLayout>
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <Button
-        android:id="@+id/addCacheBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:text="Add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/listLayout" />
+    <!--<Button-->
+        <!--android:id="@+id/addCacheBtn"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="6dp"-->
+        <!--android:text="Add"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textInputLayout"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/listLayout" />-->
 
 
 </android.support.constraint.ConstraintLayout>
