--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_login.xml
@@ -3,27 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:windowSoftInputMode="adjustResize">
 
     <!-- Login progress -->
 
-    <TextView
-        android:id="@+id/appTitleTextView"
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:text="@string/application_title_text"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textColor="@color/colorPrimary"
-        android:textSize="37sp"
-        android:textStyle="bold" />
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/logo"
+        tools:layout_editor_absoluteX="55dp"
+        tools:layout_editor_absoluteY="55dp" />
+
 
     <ProgressBar
         android:id="@+id/login_progress"
