Fixed color typo.

--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/dialog_successful_find.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/dialog_successful_find.xml
@@ -23,7 +23,7 @@ Would you like to leave a message in the chat?"/>
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.50"
-            android:background="colorSurprise"
+            android:background="@color/colorSurprise"
             android:text="No"/>
 
         <Button
